...
        OutlinedTextField(
            value = email,
            onValueChange = { email = it },
            label = { Text("Correo electrónico") },
            modifier = Modifier
                .fillMaxWidth(0.8f)
                .testTag("CampoEmail"),
            singleLine = true,
            colors = TextFieldDefaults.outlinedTextFieldColors(
                focusedTextColor = Color.White,
                unfocusedTextColor = Color.White
            )
        )
...
                    email = ""
                    password = ""
                }
            },
            modifier = Modifier
                .fillMaxWidth(0.8f)
                .testTag("BotonLogin")
        ) {
            Text("Iniciar Sesión")
        }

        if (viewModel.loginError) {
            Text("Correo o contraseña incorrectos", color = Color.Red)
...
